potool (0.11-1) unstable; urgency=medium

  * New version. Upstream and Debian are now maintained in the same Git
    repository.
  * Includes a patch to poedit from Jakub Wilk for tempfile naming and
    cleanup. Closes: #533833, #533835
  * Includes changes to check return codes/values from calls which can write
    to the filesystem. Closes: #546811

 -- Marcin Owsiany <porridge@debian.org>  Tue, 22 Sep 2009 19:32:59 +0100

potool (0.10-1) unstable; urgency=low

  * New upstream version
    - poedit now does some recoding, which hopefully Closes: #297074
  * Added a watch file
  * Fixed install to obey nostrip. Closes: #437784
  * Install all the new manpages properly, get rid of symlinks
  * Get rid of the README.PL, now that all documentation is propely in the
    manpages
  * Document that postats1 is gone in Debian.NEWS

 -- Marcin Owsiany <porridge@debian.org>  Tue, 25 Sep 2007 10:30:02 +0100

potool (0.9-1) unstable; urgency=medium

  * New upstream revision
    - fixed plural entries support in filtering, merging and copying msgids

 -- Marcin Owsiany <porridge@debian.org>  Tue, 15 May 2007 14:19:04 +0100

potool (0.8-1) unstable; urgency=medium

  * New upstream revision
    - fixed a segfault when filtering plural entries
    - fixed some memleaks

 -- Marcin Owsiany <porridge@debian.org>  Tue, 15 May 2007 11:19:23 +0100

potool (0.7-2) unstable; urgency=low

  * Added a link to the new program's home page in description and copyright

 -- Marcin Owsiany <porridge@debian.org>  Thu, 10 May 2007 22:28:45 +0100

potool (0.7-1) unstable; urgency=low

  * New upstream revision
    - adds support for msgid_plural and msgstr[N]. Closes: #422820
    - adds error checking to postats scripts. Closes: #422835
  * Changed from patching Makefile to set some variables to setting them on
    make command line in debian/rules

 -- Marcin Owsiany <porridge@debian.org>  Thu, 10 May 2007 20:47:01 +0100

potool (0.6-1) unstable; urgency=low

  * New upstream revision