@@ -2,7 +2,7 @@ Source: potool
 Section: utils
 Priority: optional
 Maintainer: Marcin Owsiany <porridge@debian.org>
-Standards-Version: 3.7.2
+Standards-Version: 3.8.0
 Build-Depends: libglib2.0-dev, bison, flex, debhelper (>> 4.0.0)
 
 Package: potool
